# include/datasystem/BUILD
package(default_visibility = ["//visibility:public"])

SUBPACKAGE_HEADER_GROUPS = [
    "//include/datasystem/hetero:all_headers",
    "//include/datasystem/object:all_headers",
    "//include/datasystem/stream:all_headers",
    "//include/datasystem/utils:all_headers",
]

filegroup(
    name = "headers_srcs",
    srcs = glob([
        "**/*.h",
        "**/*.hpp",
    ]) + SUBPACKAGE_HEADER_GROUPS,
)

cc_library(
    name = "headers",
    hdrs = glob([
        "**/*.h",
        "**/*.hpp",
    ]) + SUBPACKAGE_HEADER_GROUPS,
    includes = ["."],
    strip_include_prefix = "/include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "datasystem_client",
    deps = [
    ],
)
